# Packages

./: .gitignore
course/analysis1/: compute-mean.py
course/analysis2/: analysis2.py
course/tstools-dist/: pyproject.toml  setup.py
course/tstools-dist/tstools/: __init__.py  vis.py
course/tstools-dist/tstools.egg-info/: PKG-INFO
